# microservices-communication-benchmark

./: .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.network.yml  docker-compose.yml  pyproject.toml
benchmark/: locust_grpc.py  locust_jsonrpc.py  locust_rest.py  run_stress_tests.sh  test_data.py
common/: config.py  metrics.py  models.py
monitoring/: docker-compose.yml  docker-stats-exporter.sh
monitoring/grafana/provisioning/dashboards/: dashboard.yml  microservices-benchmark.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
protocols/grpc/: Dockerfile  docker-compose.yml  generate_grpc.sh  notification_service.py  order_service.py  payment_service.py
protocols/grpc/protos/: common.proto  notification.proto  order.proto  payment.proto
protocols/jsonrpc/: Dockerfile  client.py  docker-compose.yml  notification_service.py  order_service.py  payment_service.py
protocols/rest/: Dockerfile  docker-compose.yml  notification_service.py  order_service.py  payment_service.py
tests/: test_models.py
tests/grpc/: conftest.py  test_grpc.py
tests/jsonrpc/: conftest.py  test_jsonrpc.py
tests/rest/: conftest.py  test_rest.py
